[package]
name = "roblox_utils_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rbx_binary = { path = "./rbx-dom/rbx_binary" }
rbx_dom_weak = { path = "./rbx-dom/rbx_dom_weak" }
rbx_xml = { path = "./rbx-dom/rbx_xml" }
rbx_types = { path = "./rbx-dom/rbx_types" }
clap = { version = "4.5.49", features = ["derive"] }
chrono = "0.4.42"
thiserror = "2.0.17"
byteorder = "1.5.0"
tobj = "4.0.3"
serde = "1.0.228"
serde_json = "1.0.145"
encoding_rs = "0.8.35"
